--- a/style.css
+++ b/style.css
@@ -1,3 +1,51 @@
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(40px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(80px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-40px);
+            transform: translateY(-40px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-40px);
+            transform: translateY(-40px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
 .container {
   max-width: 35%;
   margin: 50px auto;
@@ -24,7 +72,7 @@
 }
 
 .footer {
-  border-radius: 5px;
+  border-radius: 0px 0px 5px 5px;
 }
 
 .image-upload > input {
@@ -42,16 +90,16 @@ body {
 
 /* Button used to open the chat form - fixed at the bottom of the page */
 .open-button {
-  background-color: transparent;
+  background-color: #00008B;
   color: white;
-  padding: 16px 20px;
+  padding: 10px 10px;
+  border-radius: 30px 10px 30px 30px;
   border: none;
   cursor: pointer;
   opacity: 0.8;
-  position: fixed;
   bottom: 23px;
-  right: 5px;
-  width: 140px;
+  right: 50px;
+  width: 100px;
   position: absolute;
 }
 
@@ -61,10 +109,17 @@ body {
   position: fixed;
   bottom: 0;
   right: 15px;
-  border: 3px solid #f1f1f1;
   z-index: 9;
-  border-radius: 10px;
+  border-radius: 5px;
   margin-bottom: 2%;
+  -webkit-box-shadow: 1px 1px 7px 5px grey;
+          box-shadow: 1px 1px 7px 5px grey;
+  -webkit-animation: fadeInUp 500ms ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation: fadeInUp 500ms ease-in-out;
+  -webkit-animation: fadeInLeft 500ms ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation: fadeInLeft 500ms ease-in-out;
 }
 
 /* Add styles to the form container */
@@ -72,12 +127,15 @@ body {
   width: 400px;
   padding: 10px;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 5px;
+  -webkit-animation: fadeInUp 500ms ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation: fadeInUp 500ms ease-in-out;
 }
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 
 /* Track */
@@ -88,13 +146,13 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #74b9ff;
+  background: #eee;
   border-radius: 3px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #74b9ff;
+  background: #eee;
 }
 
 /* Add a red background color to the cancel button */
@@ -262,26 +320,17 @@ hr {
 .chat-bubble {
   padding: 10px 14px;
   background: #eee;
-  margin: 10px 30px;
+  margin: 3px 20px;
   border-radius: 9px;
   position: relative;
   -webkit-animation: fadeIn 1s ease-in;
           animation: fadeIn 1s ease-in;
 }
 
-.chat-bubble:after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  width: 0;
-  height: 0;
-  border: 20px solid transparent;
-  border-bottom: 0;
-  margin-top: -10px;
-}
-
 .chat-bubble--left {
-  background: #74b9ff;
+  background: #eee;
+  border-radius: 5px 20px 20px 20px;
+  margin-top: 2%;
 }
 
 .chat-bubble--left:after {
@@ -291,11 +340,36 @@ hr {
   margin-left: -20px;
 }
 
+.chat-bubble--right {
+  border-radius: 20px 5px 20px 20px;
+  margin-top: 2%;
+  background: #00008B;
+  color: white;
+}
+
 .chat-bubble--right:after {
   right: 0;
   border-left-color: #eee;
   border-right: 0;
   margin-right: -20px;
+}
+
+.user {
+  float: right;
+}
+
+.time-right {
+  float: right;
+  margin-right: 10%;
+  font-size: 10px;
+  color: grey;
+}
+
+.time-left {
+  float: left;
+  margin-left: 10%;
+  font-size: 10px;
+  color: grey;
 }
 
 @-webkit-keyframes fadeIn {
