--- a/style.css
+++ b/style.css
@@ -9,6 +9,17 @@
   }
 }
 
+@-webkit-keyframes fadeInUp2 {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(40px) translateX(40px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+
 @-webkit-keyframes fadeInLeft {
   0% {
     opacity: 0;
@@ -46,33 +57,24 @@
   }
 }
 
-.container {
-  max-width: 35%;
-  margin: 50px auto;
-}
-
 .header1 {
   border-radius: 5px 5px 0px 0px;
+  border-bottom: 1px solid #eee;
 }
 
 .roomchat {
-  height: 400px;
+  height: 320px;
+  padding-top: 2%;
   overflow: auto;
-}
-
-.sidebar1 {
-  border-radius: 5px;
-  height: 70px;
-}
-
-.sidebar {
-  max-height: 500px;
-  overflow: auto;
-  border-radius: 5px;
+  background: white;
 }
 
 .footer {
+  width: 10px;
   border-radius: 0px 0px 5px 5px;
+  background: white;
+  -webkit-box-shadow: 1px 1px 7px 5px grey;
+          box-shadow: 1px 1px 7px 5px grey;
 }
 
 .image-upload > input {
@@ -92,8 +94,8 @@ body {
 .open-button {
   background-color: #00008B;
   color: white;
-  padding: 10px 10px;
-  border-radius: 30px 10px 30px 30px;
+  padding: 15px 15px;
+  border-radius: 50px 10px 50px 50px;
   border: none;
   cursor: pointer;
   opacity: 0.8;
@@ -101,6 +103,9 @@ body {
   right: 50px;
   width: 100px;
   position: absolute;
+  -webkit-animation: fadeInUp2 500ms ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation: fadeInUp2 500ms ease-in-out;
 }
 
 /* The popup chat - hidden by default */
@@ -112,25 +117,10 @@ body {
   z-index: 9;
   border-radius: 5px;
   margin-bottom: 2%;
-  -webkit-box-shadow: 1px 1px 7px 5px grey;
-          box-shadow: 1px 1px 7px 5px grey;
-  -webkit-animation: fadeInUp 500ms ease-in-out;
+  margin-right: 3%;
+  -webkit-animation: fadeInUp2 500ms ease-in-out;
   /* Chrome, Safari, Opera */
-  animation: fadeInUp 500ms ease-in-out;
-  -webkit-animation: fadeInLeft 500ms ease-in-out;
-  /* Chrome, Safari, Opera */
-  animation: fadeInLeft 500ms ease-in-out;
-}
-
-/* Add styles to the form container */
-.form-container {
-  width: 400px;
-  padding: 10px;
-  background-color: white;
-  border-radius: 5px;
-  -webkit-animation: fadeInUp 500ms ease-in-out;
-  /* Chrome, Safari, Opera */
-  animation: fadeInUp 500ms ease-in-out;
+  animation: fadeInUp2 500ms ease-in-out;
 }
 
 /* width */
@@ -160,15 +150,6 @@ body {
   width: 75%;
   margin-top: 10%;
   float: right;
-}
-
-.form-container .cancel i:hover {
-  color: #74b9ff;
-}
-
-/* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
 }
 
 .tombol {
@@ -214,22 +195,6 @@ body {
   cursor: pointer;
 }
 
-.search-box {
-  background: #fafafa;
-  padding: 10px 13px;
-}
-
-.search-box .input-wrapper {
-  background: #fff;
-  border-radius: 40px;
-}
-
-.search-box .input-wrapper i {
-  color: grey;
-  margin-left: 7px;
-  vertical-align: middle;
-}
-
 input {
   border: none;
   border-radius: 30px;
@@ -264,57 +229,24 @@ input:focus {
   outline: none;
 }
 
-.friend-drawer {
-  margin-top: 10px;
-  padding: 10px 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  vertical-align: baseline;
-  background: #fff;
-  -webkit-transition: .3s ease;
-  transition: .3s ease;
-  max-height: 593px;
-  overflow: auto;
-  border-radius: 5px;
-}
-
-.friend-drawer--grey {
-  background: #eee;
-}
-
-.friend-drawer .text {
-  margin-left: 12px;
-  width: 70%;
-}
-
-.friend-drawer .text h6 {
-  margin-top: 6px;
-  margin-bottom: 0;
-}
-
-.friend-drawer .text p {
-  margin: 0;
-}
-
-.friend-drawer .time {
+input .time {
   color: grey;
 }
 
-.friend-drawer--onhover:hover {
+input--onhover:hover {
   background: #74b9ff;
   cursor: pointer;
 }
 
-.friend-drawer--onhover:hover p,
-.friend-drawer--onhover:hover h6,
-.friend-drawer--onhover:hover .time {
+input--onhover:hover p,
+input--onhover:hover h6,
+input--onhover:hover .time {
   color: #fff !important;
 }
 
 hr {
   margin: 5px auto;
-  width: 60%;
+  width: 100%;
 }
 
 .chat-bubble {
@@ -328,9 +260,12 @@ hr {
 }
 
 .chat-bubble--left {
+  max-width: 75%;
+  float: left;
   background: #eee;
   border-radius: 5px 20px 20px 20px;
-  margin-top: 2%;
+  margin-top: 0%;
+  margin-left: 0px;
 }
 
 .chat-bubble--left:after {
@@ -341,8 +276,11 @@ hr {
 }
 
 .chat-bubble--right {
+  max-width: 75%;
+  float: right;
   border-radius: 20px 5px 20px 20px;
-  margin-top: 2%;
+  margin-top: 1%;
+  margin-right: 2px;
   background: #00008B;
   color: white;
 }
@@ -354,20 +292,16 @@ hr {
   margin-right: -20px;
 }
 
-.user {
-  float: right;
-}
-
 .time-right {
   float: right;
-  margin-right: 10%;
+  margin-right: 2%;
   font-size: 10px;
   color: grey;
 }
 
 .time-left {
   float: left;
-  margin-left: 10%;
+  margin-left: 14%;
   font-size: 10px;
   color: grey;
 }
@@ -424,5 +358,176 @@ hr {
 
 .chat-box-tray i:last-of-type {
   margin-left: 25px;
+}
+
+.header {
+  background: -webkit-gradient(linear, right top, left top, from(#021a4b), to(#002d85));
+  background: linear-gradient(270deg, #021a4b, #002d85);
+  height: 80px;
+  padding-top: 5%;
+  color: white;
+  border-radius: 7px 7px 0px 0px;
+  padding-top: 3%;
+  margin-bottom: 1%;
+}
+
+.main {
+  width: 300px;
+  height: 500px;
+  border-radius: 7px;
+  background: #eee;
+  -webkit-box-shadow: 1px 1px 6px 5px grey;
+          box-shadow: 1px 1px 6px 5px grey;
+}
+
+.main2 {
+  width: 300px;
+  height: 470px;
+  background: #eee;
+  -webkit-box-shadow: 1px 1px 6px 5px grey;
+          box-shadow: 1px 1px 6px 5px grey;
+  border-radius: 7px 7px 0px 0px;
+}
+
+.imageadmin {
+  border-radius: 50%;
+  margin-bottom: 4%;
+}
+
+.posisi {
+  width: 13%;
+  float: right;
+  margin-bottom: 1%;
+  border-radius: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  color: white;
+  background: grey;
+  border: none;
+  opacity: 75%;
+  cursor: pointer;
+}
+
+.posisi:hover {
+  opacity: 100%;
+}
+
+.content-head {
+  bottom: 30px;
+  margin-left: 15px;
+  height: 130px;
+  border-radius: 10px;
+  border-top: 10px #000000;
+  margin-top: 2%;
+  padding-top: 13px;
+  background: white;
+  -webkit-animation: fadeInUp 500ms ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation: fadeInUp 500ms ease-in-out;
+}
+
+.content-head2 {
+  bottom: 30px;
+  margin-left: 15px;
+  max-height: 600px;
+  border-radius: 10px;
+  border-top: 10px #000000;
+  margin-top: 2%;
+  padding-top: 13px;
+  background: white;
+  padding-bottom: 13px;
+  -webkit-animation: fadeInUp 500ms ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation: fadeInUp 500ms ease-in-out;
+}
+
+.buttonchat {
+  background: transparent;
+  border: transparent;
+  padding-bottom: 0px;
+  padding-top: 5px;
+  cursor: pointer;
+  height: 90%;
+  border-radius: 10px;
+}
+
+.buttonchat:hover {
+  background: #eee;
+  opacity: 100%;
+}
+
+.search {
+  border-radius: 50%;
+  width: 11.5%;
+  padding: 5px;
+  border: none;
+  float: right;
+  margin-bottom: 2%;
+  cursor: pointer;
+  opacity: 75%;
+}
+
+.search:hover {
+  opacity: 100%;
+  background: #eee;
+}
+
+.icon {
+  float: left;
+  font-size: 25px;
+  padding-bottom: 10px;
+}
+
+.title {
+  float: left;
+}
+
+.lastchat {
+  font-size: 13px;
+  float: right;
+  color: grey;
+}
+
+.back {
+  padding-left: 20px;
+  padding-top: 1%;
+}
+
+.alas {
+  background: transparent;
+}
+
+.back2 {
+  padding-left: 10px;
+  padding-top: 0px;
+  padding-bottom: 2px;
+}
+
+.kembali {
+  width: 35px;
+  padding: 5px;
+  border-radius: 3px;
+  border: transparent;
+  color: white;
+  background: grey;
+  opacity: 50%;
+  cursor: pointer;
+}
+
+.kembali:hover {
+  opacity: 80%;
+}
+
+.judul {
+  font-size: 15px;
+  padding-top: 0px;
+  color: white;
+}
+
+.timeonline {
+  font-size: 12px;
+  color: #eee;
 }
 /*# sourceMappingURL=style.css.map */
