--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,16 @@ $blue: #74b9ff;
       -webkit-transform: translateY(0);
   }
 }
+@-webkit-keyframes fadeInUp2 {
+  0% {
+      opacity: 0;
+      -webkit-transform: translateY(40px) translateX(40px);
+  }
+  100% {
+      opacity: 1;
+      -webkit-transform: translateY(0);
+  }
+}
 
 @-webkit-keyframes fadeInLeft {
   0% {
@@ -33,28 +43,23 @@ $blue: #74b9ff;
   }
 }
 
-.container{
-    max-width: 35%;
-    margin:50px auto;
-}
 .header1{
     border-radius: 5px 5px 0px 0px;
+    border-bottom: 1px solid #eee;
 }
 .roomchat{
-    height: 400px;
+    height: 320px;
+    padding-top: 2%;
     overflow: auto;
+    background: white;
 }
-.sidebar1{
-    border-radius: 5px;
-    height: 70px;
-}
-.sidebar{
-    max-height: 500px;
-    overflow: auto;
-    border-radius: 5px;
-}
+
 .footer{
+    width: 10px;
     border-radius: 0px 0px 5px 5px;
+    background: white;
+    box-shadow:  1px 1px 7px 5px grey;
+   
 }
 .image-upload>input {
     display: none;
@@ -66,8 +71,8 @@ $blue: #74b9ff;
   .open-button {
     background-color:#00008B;
     color: white;
-    padding: 10px 10px;
-    border-radius: 30px 10px 30px 30px;
+    padding: 15px 15px;
+    border-radius: 50px 10px 50px 50px;
     border: none;
     cursor: pointer;
     opacity: 0.8;
@@ -76,6 +81,8 @@ $blue: #74b9ff;
     right: 50px;
     width: 100px;
     position: absolute;
+    -webkit-animation: fadeInUp2 500ms ease-in-out; /* Chrome, Safari, Opera */
+    animation: fadeInUp2 500ms ease-in-out;
   }
   
   /* The popup chat - hidden by default */
@@ -88,30 +95,18 @@ $blue: #74b9ff;
     z-index: 9;
     border-radius: 5px;
     margin-bottom: 2%;
-    box-shadow:  1px 1px 7px 5px grey;
-    -webkit-animation: fadeInUp 500ms ease-in-out; /* Chrome, Safari, Opera */
-    animation: fadeInUp 500ms ease-in-out;
-    -webkit-animation: fadeInLeft 500ms ease-in-out; /* Chrome, Safari, Opera */
-    animation: fadeInLeft 500ms ease-in-out;
-    
-  }
-  
-  /* Add styles to the form container */
-  .form-container {
-    width: 400px;
-    padding: 10px;
-    background-color: white;
-    border-radius: 5px;
-    -webkit-animation: fadeInUp 500ms ease-in-out; /* Chrome, Safari, Opera */
-    animation: fadeInUp 500ms ease-in-out;
+    margin-right: 3%;
+    // box-shadow:  1px 1px 7px 5px grey;
+    -webkit-animation: fadeInUp2 500ms ease-in-out; /* Chrome, Safari, Opera */
+    animation: fadeInUp2 500ms ease-in-out;
+    // -webkit-animation: fadeInLeft 500ms ease-in-out; /* Chrome, Safari, Opera */
+    // animation: fadeInLeft 500ms ease-in-out;
     
   }
   
   /* width */
 ::-webkit-scrollbar {
   width: 5px;
-  
-
 }
 
 /* Track */
@@ -128,11 +123,13 @@ $blue: #74b9ff;
   background: #eee; 
   border-radius: 3px;
   
+  
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #eee; 
+  
   
 }
   
@@ -143,23 +140,17 @@ $blue: #74b9ff;
     margin-top: 10%;
     float: right;
 
-    i:hover{
-      color: $blue;
-    }
-
-  }
   
-  /* Add some hover effects to buttons */
-  .form-container .btn:hover, .open-button:hover {
-    opacity: 1;
   }
+
+  
   .tombol{
     margin-top: 10px;
     padding: 0%;
     height: 35px;
     width: 100%;
   }
-  // Video tutorial/codealong here: https://youtu.be/fCpw5i_2IYU
+  
 
 
 .profile-image {
@@ -197,21 +188,6 @@ $blue: #74b9ff;
   }
 }
 
-.search-box {
-  background: #fafafa;
-  padding: 10px 13px;
-  
-  .input-wrapper {
-    background: #fff;
-    border-radius: 40px;
-    
-    i {
-      color: grey;
-      margin-left: 7px; 
-      vertical-align: middle;
-    }
-  }
-}
 
 input {
   border: none;
@@ -227,38 +203,7 @@ input {
   &:focus {
     outline: none;
   }
-}
 
-.friend-drawer {
-  margin-top: 10px;
-  padding: 10px 15px;
-  display: flex;
-  vertical-align: baseline;
-  background: #fff;
-  transition: .3s ease;
-  max-height: 593px;
-  overflow: auto;
-  border-radius: 5px;
-  
-  
-  &--grey {
-    background: #eee;
-  }
-  
-  .text {
-    margin-left: 12px;
-    width: 70%;
-    
-    h6 {
-      margin-top: 6px;
-      margin-bottom: 0;
-    }
-    
-    p {
-      margin: 0;
-    }
-  }
-  
   .time {
     color: grey;
   }
@@ -277,7 +222,7 @@ input {
 
 hr {
   margin: 5px auto;
-  width: 60%;
+  width: 100%;
 }
 
 .chat-bubble {
@@ -291,9 +236,12 @@ hr {
 
   
   &--left {
+    max-width: 75%;
+    float: left;
     background: #eee;
     border-radius: 5px 20px 20px 20px;
-    margin-top: 2%;
+    margin-top: 0%;
+    margin-left: 0px;
      &:after {
       left: 0;
       // border-radius: 9px 9px;
@@ -304,8 +252,11 @@ hr {
   }
   
   &--right {
+    max-width: 75%;
+    float: right;
     border-radius: 20px 5px 20px 20px;
-    margin-top: 2%;
+    margin-top: 1%;
+    margin-right: 2px;
     background: #00008B;
     color: white;
     &:after {
@@ -316,18 +267,16 @@ hr {
     }
   }
 }
-.user{
-  float: right;
-}
+
 .time-right{
   float: right;
-  margin-right: 10%;
+  margin-right: 2%;
   font-size: 10px;
   color: grey;
 }
 .time-left{
   float: left;
-  margin-left: 10%;
+  margin-left: 14%;
   font-size: 10px;
   color: grey;
 }
@@ -376,3 +325,162 @@ hr {
     }
   }
 }
+.header{
+  background: linear-gradient(270deg, #021a4b, #002d85);
+    height: 80px;
+    padding-top: 5%;
+    color: white;
+    border-radius: 7px 7px 0px 0px;
+    padding-top: 3%;
+    margin-bottom: 1%;
+}
+.main{
+    width: 300px;
+    height: 500px;
+    border-radius: 7px;
+    background: #eee;
+    box-shadow:  1px 1px 6px 5px grey;
+}
+.main2{
+  width: 300px;
+  height: 470px;
+  background: #eee;
+  box-shadow:  1px 1px 6px 5px grey;
+  border-radius: 7px 7px 0px 0px;
+}
+.imageadmin{
+  
+  border-radius: 50%;
+  margin-bottom: 4%;
+}
+   
+.posisi{
+  width: 13%;
+  float: right;
+  margin-bottom: 1%;
+  border-radius: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  color: white;
+  background: grey;
+  border: none;
+  opacity: 75%;
+  cursor: pointer;
+  
+}
+.posisi:hover{
+  opacity: 100%;
+}
+.content-head{
+    bottom: 30px;
+    margin-left: 15px ;
+    height: 130px;
+    border-radius: 10px;
+    border-top: 10px #000000;
+    margin-top: 2%;
+    padding-top: 13px;
+    background: white;
+    -webkit-animation: fadeInUp 500ms ease-in-out; /* Chrome, Safari, Opera */
+    animation: fadeInUp 500ms ease-in-out;
+    
+}
+.content-head2{
+  bottom: 30px;
+  margin-left: 15px ;
+  max-height: 600px;
+  border-radius: 10px;
+  border-top: 10px #000000;
+  margin-top: 2%;
+  padding-top: 13px;
+  background: white;
+  padding-bottom: 13px;
+  -webkit-animation: fadeInUp 500ms ease-in-out; /* Chrome, Safari, Opera */
+    animation: fadeInUp 500ms ease-in-out;
+  
+  
+}
+.buttonchat{
+ 
+  
+  background: transparent;
+  border: transparent;
+  padding-bottom: 0px;
+  padding-top: 5px;
+  cursor: pointer;
+  height: 90%;
+  border-radius: 10px;
+  
+}
+.buttonchat:hover{
+  background: #eee;
+  opacity: 100%;
+}
+.search{
+  border-radius: 50%;
+  width: 11.5%;
+  padding:5px;
+  border: none;
+  float: right;
+  margin-bottom: 2%;
+  cursor: pointer;
+  opacity: 75%;
+}
+.search:hover{
+  opacity: 100%;
+  background: #eee;
+}
+.icon{
+  float: left;
+  font-size: 25px;
+  
+  padding-bottom: 10px;
+}
+.title{
+  float: left;
+}
+.lastchat{
+  font-size: 13px;
+  float: right;
+  color: grey;
+}
+.back{
+  padding-left: 20px;
+  padding-top: 1%;
+ 
+}
+.alas{
+  background: transparent;
+}
+.back2{
+  padding-left: 10px;
+  padding-top: 0px;
+  padding-bottom: 2px;
+  
+ 
+}
+.kembali{
+  width: 35px;
+  padding: 5px;
+  border-radius: 3px;
+  border: transparent;
+  color: white;
+  background: grey;
+  opacity: 50%  ;
+  cursor: pointer;
+  
+}
+.kembali:hover{
+  opacity: 80%;
+}
+.judul{
+  font-size: 15px;
+  padding-top: 0px;
+  color: white;
+}
+.timeonline{
+  font-size: 12px;
+  color: #eee;
+}
+   
