--- a/style.scss
+++ b/style.scss
@@ -2,155 +2,170 @@ $blue: #74b9ff;
 
 @-webkit-keyframes fadeInUp {
   0% {
-      opacity: 0;
-      -webkit-transform: translateY(40px);
+    opacity: 0;
+    -webkit-transform: translateY(40px);
   }
+
   100% {
-      opacity: 1;
-      -webkit-transform: translateY(0);
+    opacity: 1;
+    -webkit-transform: translateY(0);
   }
 }
+
 @-webkit-keyframes fadeInUp2 {
   0% {
-      opacity: 0;
-      -webkit-transform: translateY(40px) translateX(40px);
+    opacity: 0;
+    -webkit-transform: translateY(40px) translateX(40px);
   }
+
   100% {
-      opacity: 1;
-      -webkit-transform: translateY(0);
+    opacity: 1;
+    -webkit-transform: translateY(0);
   }
 }
 
 @-webkit-keyframes fadeInLeft {
   0% {
-      opacity: 0;
-      -webkit-transform: translateX(80px);
+    opacity: 0;
+    -webkit-transform: translateX(80px);
   }
+
   100% {
-      opacity: 1;
-      -webkit-transform: translateY(0);
+    opacity: 1;
+    -webkit-transform: translateY(0);
   }
 }
 
 @keyframes fadeInDown {
   0% {
-      opacity: 0;
-      transform: translateY(-40px);
+    opacity: 0;
+    transform: translateY(-40px);
   }
+
   100% {
-      opacity: 1;
-      transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
-.header1{
-    border-radius: 5px 5px 0px 0px;
-    border-bottom: 1px solid #eee;
-}
-.roomchat{
-    height: 320px;
-    padding-top: 2%;
-    overflow: auto;
-    background: white;
+.header1 {
+  border-radius: 5px 5px 0px 0px;
+  border-bottom: 1px solid #eee;
 }
 
-.footer{
-    width: 10px;
-    border-radius: 0px 0px 5px 5px;
-    background: white;
-    box-shadow:  1px 1px 7px 5px grey;
-   
+.roomchat {
+  height: 320px;
+  padding-top: 2%;
+  overflow: auto;
+  background: white;
 }
+
+.footer {
+  width: 10px;
+  border-radius: 0px 0px 5px 5px;
+  background: white;
+  box-shadow: 1px 1px 7px 5px grey;
+
+}
+
 .image-upload>input {
-    display: none;
-  }
-  body {font-family: Arial, Helvetica, sans-serif;}
-  * {box-sizing: border-box;}
-  
-  /* Button used to open the chat form - fixed at the bottom of the page */
-  .open-button {
-    background-color:#00008B;
-    color: white;
-    padding: 15px 15px;
-    border-radius: 50px 10px 50px 50px;
-    border: none;
-    cursor: pointer;
-    opacity: 0.8;
-    // position: fixed;
-    bottom: 23px;
-    right: 50px;
-    width: 100px;
-    position: absolute;
-    -webkit-animation: fadeInUp2 500ms ease-in-out; /* Chrome, Safari, Opera */
-    animation: fadeInUp2 500ms ease-in-out;
-  }
-  
-  /* The popup chat - hidden by default */
-  .chat-popup {
-    display: none;
-    position: fixed;
-    bottom: 0;
-    right: 15px;
-    // border: 3px solid #f1f1f1;
-    z-index: 9;
-    border-radius: 5px;
-    margin-bottom: 2%;
-    margin-right: 3%;
-    // box-shadow:  1px 1px 7px 5px grey;
-    -webkit-animation: fadeInUp2 500ms ease-in-out; /* Chrome, Safari, Opera */
-    animation: fadeInUp2 500ms ease-in-out;
-    // -webkit-animation: fadeInLeft 500ms ease-in-out; /* Chrome, Safari, Opera */
-    // animation: fadeInLeft 500ms ease-in-out;
-    
-  }
-  
-  /* width */
+  display: none;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* Button used to open the chat form - fixed at the bottom of the page */
+.open-button {
+  background-color: #00008B;
+  color: white;
+  padding: 15px 15px;
+  border-radius: 50px 10px 50px 50px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  // position: fixed;
+  bottom: 23px;
+  right: 50px;
+  width: 100px;
+  position: absolute;
+  -webkit-animation: fadeInUp2 500ms ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation: fadeInUp2 500ms ease-in-out;
+}
+
+/* The popup chat - hidden by default */
+.chat-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  // border: 3px solid #f1f1f1;
+  z-index: 9;
+  border-radius: 5px;
+  margin-bottom: 2%;
+  margin-right: 3%;
+  // box-shadow:  1px 1px 7px 5px grey;
+  -webkit-animation: fadeInUp2 500ms ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation: fadeInUp2 500ms ease-in-out;
+  // -webkit-animation: fadeInLeft 500ms ease-in-out; /* Chrome, Safari, Opera */
+  // animation: fadeInLeft 500ms ease-in-out;
+
+}
+
+/* width */
 ::-webkit-scrollbar {
   width: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  
+
   // box-shadow: inset 0 0 2px dodgerblue; 
   border: transparent;
   border-radius: 3px;
-  
+
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #eee; 
+  background: #eee;
   border-radius: 3px;
-  
-  
+
+
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #eee; 
-  
-  
+  background: #eee;
+
+
 }
-  
-  /* Add a red background color to the cancel button */
-  .form-container .cancel {
-    // background-color: red;
-    width: 75%;
-    margin-top: 10%;
-    float: right;
 
-  
-  }
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  // background-color: red;
+  width: 75%;
+  margin-top: 10%;
+  float: right;
 
-  
-  .tombol{
-    margin-top: 10px;
-    padding: 0%;
-    height: 35px;
-    width: 100%;
-  }
-  
+
+}
+
+
+.tombol {
+  margin-top: 10px;
+  padding: 0%;
+  height: 35px;
+  width: 100%;
+}
+
 
 
 .profile-image {
@@ -164,22 +179,22 @@ $blue: #74b9ff;
   padding: 10px 15px;
   border-radius: 7px;
   margin-bottom: 5%;
-  
+
   .no-gutters {
     padding: 0;
   }
-  
+
   &--right {
     float: right;
     padding-right: 0px;
-    
+
     i {
       margin-top: 0px;
       font-size: 25px;
       color: grey;
       margin-left: 0px;
       transition: .3s;
-      
+
       &:hover {
         color: $blue;
         cursor: pointer;
@@ -207,11 +222,11 @@ input {
   .time {
     color: grey;
   }
-  
+
   &--onhover:hover {
     background: $blue;
     cursor: pointer;
-    
+
     p,
     h6,
     .time {
@@ -232,9 +247,9 @@ hr {
   border-radius: 9px;
   position: relative;
   animation: fadeIn 1s ease-in;
-  
 
-  
+
+
   &--left {
     max-width: 75%;
     float: left;
@@ -242,15 +257,16 @@ hr {
     border-radius: 5px 20px 20px 20px;
     margin-top: 0%;
     margin-left: 0px;
-     &:after {
+
+    &:after {
       left: 0;
       // border-radius: 9px 9px;
-      border-right-color:$blue ;
-	    border-left: 0;
+      border-right-color: $blue;
+      border-left: 0;
       margin-left: -20px;
     }
   }
-  
+
   &--right {
     max-width: 75%;
     float: right;
@@ -259,22 +275,24 @@ hr {
     margin-right: 2px;
     background: #00008B;
     color: white;
+
     &:after {
       right: 0;
       border-left-color: #eee;
-	    border-right: 0;
+      border-right: 0;
       margin-right: -20px;
     }
   }
 }
 
-.time-right{
+.time-right {
   float: right;
   margin-right: 2%;
   font-size: 10px;
   color: grey;
 }
-.time-left{
+
+.time-left {
   float: left;
   margin-left: 14%;
   font-size: 10px;
@@ -282,12 +300,13 @@ hr {
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 
@@ -298,63 +317,40 @@ hr {
   }
 }
 
-.chat-box-tray {
-  background: transparent;
-  display: flex;
-  align-items: baseline;
-  padding: 10px 10px;
-  align-items: center;
-  
-  
-  bottom: 0;
-  
-  input {
-    margin: 0 10px;
-    padding: 6px 2px;
-    border-radius: 5px;
-    
-  }
-  
-  i {
-    color: grey;
-    font-size: 30px;
-    vertical-align: middle;
-    
-    &:last-of-type {
-      margin-left: 25px;
-    }
-  }
-}
-.header{
+
+.header {
   background: linear-gradient(270deg, #021a4b, #002d85);
-    height: 80px;
-    padding-top: 5%;
-    color: white;
-    border-radius: 7px 7px 0px 0px;
-    padding-top: 3%;
-    margin-bottom: 1%;
+  height: 80px;
+  padding-top: 5%;
+  color: white;
+  border-radius: 7px 7px 0px 0px;
+  padding-top: 3%;
+  margin-bottom: 1%;
 }
-.main{
-    width: 300px;
-    height: 500px;
-    border-radius: 7px;
-    background: #eee;
-    box-shadow:  1px 1px 6px 5px grey;
+
+.main {
+  width: 300px;
+  height: 500px;
+  border-radius: 7px;
+  background: #eee;
+  box-shadow: 1px 1px 6px 5px grey;
 }
-.main2{
+
+.main2 {
   width: 300px;
   height: 470px;
   background: #eee;
-  box-shadow:  1px 1px 6px 5px grey;
+  box-shadow: 1px 1px 6px 5px grey;
   border-radius: 7px 7px 0px 0px;
 }
-.imageadmin{
-  
+
+.imageadmin {
+
   border-radius: 50%;
   margin-bottom: 4%;
 }
-   
-.posisi{
+
+.posisi {
   width: 13%;
   float: right;
   margin-bottom: 1%;
@@ -368,27 +364,31 @@ hr {
   border: none;
   opacity: 75%;
   cursor: pointer;
-  
+
 }
-.posisi:hover{
+
+.posisi:hover {
   opacity: 100%;
 }
-.content-head{
-    bottom: 30px;
-    margin-left: 15px ;
-    height: 130px;
-    border-radius: 10px;
-    border-top: 10px #000000;
-    margin-top: 2%;
-    padding-top: 13px;
-    background: white;
-    -webkit-animation: fadeInUp 500ms ease-in-out; /* Chrome, Safari, Opera */
-    animation: fadeInUp 500ms ease-in-out;
-    
-}
-.content-head2{
+
+.content-head {
   bottom: 30px;
-  margin-left: 15px ;
+  margin-left: 15px;
+  height: 130px;
+  border-radius: 10px;
+  border-top: 10px #000000;
+  margin-top: 2%;
+  padding-top: 13px;
+  background: white;
+  -webkit-animation: fadeInUp 500ms ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation: fadeInUp 500ms ease-in-out;
+
+}
+
+.content-head2 {
+  bottom: 30px;
+  margin-left: 15px;
   max-height: 600px;
   border-radius: 10px;
   border-top: 10px #000000;
@@ -396,91 +396,108 @@ hr {
   padding-top: 13px;
   background: white;
   padding-bottom: 13px;
-  -webkit-animation: fadeInUp 500ms ease-in-out; /* Chrome, Safari, Opera */
-    animation: fadeInUp 500ms ease-in-out;
-  
-  
+  -webkit-animation: fadeInUp 500ms ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation: fadeInUp 500ms ease-in-out;
+
+
 }
-.buttonchat{
- 
-  
+
+.buttonchat {
+
+
   background: transparent;
   border: transparent;
   padding-bottom: 0px;
   padding-top: 5px;
   cursor: pointer;
   height: 90%;
+  width: 100%;
   border-radius: 10px;
-  
+  margin: auto;
+
 }
-.buttonchat:hover{
+
+.buttonchat:hover {
   background: #eee;
   opacity: 100%;
 }
-.search{
+
+.search {
   border-radius: 50%;
   width: 11.5%;
-  padding:5px;
-  border: none;
+  padding: 5px;
+  border: 1px solid rgb(223, 223, 223);
+  background: transparent;
   float: right;
   margin-bottom: 2%;
   cursor: pointer;
   opacity: 75%;
 }
-.search:hover{
+
+.search:hover {
   opacity: 100%;
   background: #eee;
 }
-.icon{
+
+.icon {
   float: left;
   font-size: 25px;
-  
+
   padding-bottom: 10px;
 }
-.title{
+
+.title {
   float: left;
 }
-.lastchat{
+
+.lastchat {
   font-size: 13px;
   float: right;
   color: grey;
 }
-.back{
+
+.back {
   padding-left: 20px;
   padding-top: 1%;
- 
+
 }
-.alas{
+
+.alas {
   background: transparent;
 }
-.back2{
+
+.back2 {
   padding-left: 10px;
   padding-top: 0px;
   padding-bottom: 2px;
-  
- 
+
+
 }
-.kembali{
+
+.kembali {
   width: 35px;
   padding: 5px;
   border-radius: 3px;
   border: transparent;
   color: white;
   background: grey;
-  opacity: 50%  ;
+  opacity: 50%;
   cursor: pointer;
-  
+
 }
-.kembali:hover{
+
+.kembali:hover {
   opacity: 80%;
 }
-.judul{
+
+.judul {
   font-size: 15px;
   padding-top: 0px;
   color: white;
 }
-.timeonline{
+
+.timeonline {
   font-size: 12px;
   color: #eee;
 }
-   
