--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@
   width: 10px;
   border-radius: 0px 0px 5px 5px;
   background: white;
-  -webkit-box-shadow: 1px 1px 7px 5px grey;
-          box-shadow: 1px 1px 7px 5px grey;
+  -webkit-box-shadow: 1px 1px 7px 5px #DCDCDC;
+          box-shadow: 1px 1px 7px 5px #DCDCDC;
 }
 
 .image-upload > input {
@@ -201,25 +201,25 @@ input {
 }
 
 input::-webkit-input-placeholder {
-  color: #e3e3e3;
+  color: #DCDCDC;
   font-weight: 300;
   margin-left: 20px;
 }
 
 input:-ms-input-placeholder {
-  color: #e3e3e3;
+  color: #DCDCDC;
   font-weight: 300;
   margin-left: 20px;
 }
 
 input::-ms-input-placeholder {
-  color: #e3e3e3;
+  color: #DCDCDC;
   font-weight: 300;
   margin-left: 20px;
 }
 
 input::placeholder {
-  color: #e3e3e3;
+  color: #DCDCDC;
   font-weight: 300;
   margin-left: 20px;
 }
@@ -296,6 +296,11 @@ hr {
   margin-right: 2%;
   font-size: 10px;
   color: grey;
+  opacity: 0%;
+}
+
+.time-right:hover {
+  opacity: 100%;
 }
 
 .time-left {
@@ -303,6 +308,11 @@ hr {
   margin-left: 14%;
   font-size: 10px;
   color: grey;
+  opacity: 0%;
+}
+
+.time-left:hover {
+  opacity: 100%;
 }
 
 @-webkit-keyframes fadeIn {
@@ -323,11 +333,6 @@ hr {
   }
 }
 
-.offset-md-9 .chat-bubble {
-  background: #74b9ff;
-  color: #fff;
-}
-
 .header {
   background: -webkit-gradient(linear, right top, left top, from(#021a4b), to(#002d85));
   background: linear-gradient(270deg, #021a4b, #002d85);
@@ -344,16 +349,16 @@ hr {
   height: 500px;
   border-radius: 7px;
   background: #eee;
-  -webkit-box-shadow: 1px 1px 6px 5px grey;
-          box-shadow: 1px 1px 6px 5px grey;
+  -webkit-box-shadow: 1px 1px 6px 5px #DCDCDC;
+          box-shadow: 1px 1px 6px 5px #DCDCDC;
 }
 
 .main2 {
   width: 300px;
   height: 470px;
   background: #eee;
-  -webkit-box-shadow: 1px 1px 6px 5px grey;
-          box-shadow: 1px 1px 6px 5px grey;
+  -webkit-box-shadow: 1px 1px 6px 5px #DCDCDC;
+          box-shadow: 1px 1px 6px 5px #DCDCDC;
   border-radius: 7px 7px 0px 0px;
 }
 
@@ -399,7 +404,7 @@ hr {
 .content-head2 {
   bottom: 30px;
   margin-left: 15px;
-  max-height: 600px;
+  max-height: 590px;
   border-radius: 10px;
   border-top: 10px #000000;
   margin-top: 2%;
@@ -420,10 +425,22 @@ hr {
   height: 90%;
   width: 100%;
   border-radius: 10px;
+  margin: auto 10px;
+}
+
+.buttonchat1 {
+  background: transparent;
+  border: transparent;
+  padding-bottom: 0px;
+  padding-top: 5px;
+  cursor: pointer;
+  height: 60px;
+  width: 95%;
+  border-radius: 10px;
   margin: auto;
 }
 
-.buttonchat:hover {
+.buttonchat:hover, .buttonchat1:hover {
   background: #eee;
   opacity: 100%;
 }
@@ -448,11 +465,19 @@ hr {
 .icon {
   float: left;
   font-size: 25px;
+  padding-left: 10px;
+  padding-top: 7px;
   padding-bottom: 10px;
+}
+
+.title-chat {
+  float: left;
+  margin-left: 10%;
 }
 
 .title {
   float: left;
+  margin-left: 15%;
 }
 
 .lastchat {
