--- a/style.css
+++ b/style.css
@@ -345,8 +345,8 @@ hr {
 }
 
 .main {
-  width: 300px;
-  height: 500px;
+  width: 330px;
+  height: 526px;
   border-radius: 7px;
   background: #eee;
   -webkit-box-shadow: 1px 1px 6px 5px #DCDCDC;
@@ -364,7 +364,7 @@ hr {
 
 .imageadmin {
   border-radius: 50%;
-  margin-bottom: 4%;
+  margin-bottom: 3%;
 }
 
 .posisi {
@@ -399,6 +399,8 @@ hr {
   -webkit-animation: fadeInUp 500ms ease-in-out;
   /* Chrome, Safari, Opera */
   animation: fadeInUp 500ms ease-in-out;
+  -webkit-box-shadow: 1px 2px 7px  grey;
+          box-shadow: 1px 2px 7px  grey;
 }
 
 .content-head2 {
@@ -414,13 +416,15 @@ hr {
   -webkit-animation: fadeInUp 500ms ease-in-out;
   /* Chrome, Safari, Opera */
   animation: fadeInUp 500ms ease-in-out;
+  -webkit-box-shadow: 1px 2px 7px  grey;
+          box-shadow: 1px 2px 7px  grey;
 }
 
 .buttonchat {
   background: transparent;
   border: transparent;
   padding-bottom: 0px;
-  padding-top: 5px;
+  padding-top: 5%;
   cursor: pointer;
   height: 90%;
   width: 100%;
@@ -440,7 +444,8 @@ hr {
   margin: auto;
 }
 
-.buttonchat:hover, .buttonchat1:hover {
+.buttonchat:hover,
+.buttonchat1:hover {
   background: #eee;
   opacity: 100%;
 }
@@ -466,8 +471,12 @@ hr {
   float: left;
   font-size: 25px;
   padding-left: 10px;
-  padding-top: 7px;
+  padding-top: 5px;
   padding-bottom: 10px;
+}
+
+.lastday hr {
+  margin-top: 15%;
 }
 
 .title-chat {
